WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54409
compositing/direct-image-compositing.html fails after
r78484
https://bugs.webkit.org/show_bug.cgi?id=54409
Summary
compositing/direct-image-compositing.html fails after r78484
Peter Kasting
Reported
2011-02-14 13:20:18 PST
See test results at
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=compositing%2Fdirect-image-compositing.html&showExpectations=true&group=%40ToT%20GPU%20-%20chromium.org
. Notice the difference in how the blurs on the left side of the result page look.
Attachments
Patch
(4.92 KB, patch)
2011-02-18 10:42 PST
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Kasting
Comment 1
2011-02-14 13:48:09 PST
It looks as if the following failures are also caused by this change. Note that in these cases, the difference generally looks like something I'd rebaseline for, but since the test in
comment 0
is clearly a significant change I'm going to just mark all these as failing until you can look. compositing/geometry/fixed-position.html compositing/geometry/horizontal-scroll-composited.html compositing/geometry/vertical-scroll-composited.html compositing/masks/masked-ancestor.html compositing/masks/simple-composited-mask.html compositing/overflow/fixed-position-ancestor-clip.html fast/canvas/canvas-text-alignment.html fast/canvas/image-object-in-canvas.html
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=compositing%2Fgeometry%2Ffixed-position.html%2Ccompositing%2Fgeometry%2Fhorizontal-scroll-composited.html%2Ccompositing%2Fgeometry%2Fvertical-scroll-composited.html%2Ccompositing%2Fmasks%2Fmasked-ancestor.html%2Ccompositing%2Fmasks%2Fsimple-composited-mask.html%2Ccompositing%2Foverflow%2Ffixed-position-ancestor-clip.html%2Cfast%2Fcanvas%2Fcanvas-text-alignment.html%2Cfast%2Fcanvas%2Fimage-object-in-canvas.html&showExpectations=true&group=%40ToT%20GPU%20-%20chromium.org
Adrienne Walker
Comment 2
2011-02-14 14:41:06 PST
Thanks for filing this with all the additional cases. It looks like it's an extremely small change and not anything as large as an off-by-one texel issue. The scrollbars on the fixed-position test go from RGB a4a4a4 to a3a3a3. My intuition is that this is floating point error in the texture transform going to the shader causing a minute amount of filtering.
Adrienne Walker
Comment 3
2011-02-18 10:42:19 PST
Created
attachment 82979
[details]
Patch
Adrienne Walker
Comment 4
2011-02-18 10:47:56 PST
This patch fixes some issues on Linux (but breaks tests because of the recent rebaselining). It fixes some issues on Windows, but I'll point out that it breaks a few issues from the pre-patch rebaselining. However, I think nearest sampling will give more consistent results in the future, so I will rebaseline all of the tests affected by this patch after this lands. Obviously once we have tiled content layers, we can add an option for bilinear filtering on those layers.
Kenneth Russell
Comment 5
2011-02-18 11:57:47 PST
Comment on
attachment 82979
[details]
Patch Looks okay to me.
WebKit Commit Bot
Comment 6
2011-02-18 19:53:43 PST
Comment on
attachment 82979
[details]
Patch Clearing flags on attachment: 82979 Committed
r79084
: <
http://trac.webkit.org/changeset/79084
>
WebKit Commit Bot
Comment 7
2011-02-18 19:53:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug