2011-02-18  Adrienne Walker  <enne@google.com>

Reviewed by Kenneth Russell.

        Adjust expectations for chromium GPU tests.
        https://bugs.webkit.org/show_bug.cgi?id=54409
        https://bugs.webkit.org/show_bug.cgi?id=54509

        Correct baselines for the 54409 images will be generated after this lands.

        * platform/chromium/test_expectations.txt:
2011-02-18  Adrienne Walker  <enne@google.com>

        Reviewed by Kenneth Russell.

        [chromium] Use nearest-neighbor filtering for root layer.
        https://bugs.webkit.org/show_bug.cgi?id=54409
        https://bugs.webkit.org/show_bug.cgi?id=54509

        This setting creates more consistent images for LayoutTests and
        prevents small floating point errors in texture coordinates from
        creating off-by-one pixel color differences.

        * platform/graphics/chromium/LayerTilerChromium.cpp:
        (WebCore::LayerTilerChromium::update):

Canonical link: https://commits.webkit.org/69030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79084 268f45cc-cd09-0410-ab3c-d52691b4dbfc